[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://InfiniteCanvas/InfiniteCanvas.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/UIStatusbar.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/UITitlebar.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/UIMenuPopup.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/UIToolbar.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.207843, 0.211765, 0.227451, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.207843, 0.211765, 0.227451, 1 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
canvas_color = Color( 0.309804, 0.309804, 0.309804, 1 )

[node name="InfiniteCanvas" parent="." instance=ExtResource( 2 )]
margin_left = -0.749146
margin_right = -0.749146

[node name="UITitlebar" parent="." instance=ExtResource( 4 )]
_menu_popup_path = NodePath("../UIMenuPopup")

[node name="UIToolbar" parent="." instance=ExtResource( 6 )]
margin_top = 38.0
margin_bottom = 78.0
_file_dialog_path = NodePath("../FileDialog")
_color_picker_path = NodePath("../ColorpickerPopup/PanelContainer/ColorPicker")

[node name="UIStatusBar" parent="." instance=ExtResource( 3 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -24.0
margin_bottom = 0.0

[node name="FileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -385.0
margin_top = -216.5
margin_right = 385.0
margin_bottom = 216.5
access = 2
filters = PoolStringArray( "*.lorien" )
current_dir = "/Projects/Other/lorien/lorien"
current_file = "Lorien"
current_path = "/Projects/Other/lorien/lorien/Lorien"

[node name="ColorpickerPopup" type="Popup" parent="."]
margin_left = 364.0
margin_top = 77.0
margin_right = 666.0
margin_bottom = 504.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="ColorpickerPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPicker" type="ColorPicker" parent="ColorpickerPopup/PanelContainer"]
margin_left = 220.0
margin_top = 220.0
margin_right = 528.0
margin_bottom = 658.0
edit_alpha = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UIMenuPopup" parent="." instance=ExtResource( 5 )]
margin_top = 38.0
margin_bottom = 238.0

[connection signal="mouse_entered" from="InfiniteCanvas" to="." method="_on_InfiniteCanvas_mouse_entered"]
[connection signal="mouse_exited" from="InfiniteCanvas" to="." method="_on_InfiniteCanvas_mouse_exited"]
